--- a/apps/ckeditor/project.json
+++ b/apps/ckeditor/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@nrwl/web:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "compiler": "babel",
@@ -15,10 +17,15 @@
         "main": "apps/ckeditor/src/main.tsx",
         "polyfills": "apps/ckeditor/src/polyfills.ts",
         "tsConfig": "apps/ckeditor/tsconfig.app.json",
-        "assets": ["apps/ckeditor/src/favicon.ico", "apps/ckeditor/src/assets"],
-        "styles": ["apps/ckeditor/src/styles.scss"],
+        "assets": [
+          "apps/ckeditor/src/favicon.ico",
+          "apps/ckeditor/src/assets"
+        ],
+        "styles": [
+          "apps/ckeditor/src/styles.scss"
+        ],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "apps/ckeditor/webpack.config.js"
       },
       "configurations": {
         "development": {
@@ -62,14 +69,20 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/ckeditor/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/ckeditor/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/ckeditor"],
+      "outputs": [
+        "coverage/apps/ckeditor"
+      ],
       "options": {
         "jestConfig": "apps/ckeditor/jest.config.ts",
         "passWithNoTests": true
